syntax = "proto3";

package soma.rpc;

import "soma/rpc/transaction.proto";

message SystemState {
  // Core epoch information
  optional uint64 epoch = 1;
  optional uint64 epoch_start_timestamp_ms = 2;

  // The protocol version
  optional uint64 protocol_version = 3;
  
  // System parameters
  optional SystemParameters parameters = 4;
  
  // Validator and encoder sets
  optional ValidatorSet validators = 5;
  
  // Report records
  map<string, ReporterSet> validator_report_records = 6;
  
  // Emission pool
  optional EmissionPool emission_pool = 7;

  map<uint64, uint64> target_rewards_per_epoch = 8;
  map<uint64, uint64> targets_created_per_epoch = 9;
  map<uint64, bytes> epoch_seeds = 10;
}

message ReporterSet {
  repeated string reporters = 1;
}

message SystemParameters {
  optional uint64 epoch_duration_ms = 1;
  optional uint64 vdf_iterations = 2;
  optional uint64 target_selection_rate_bps = 3;
  optional uint64 target_reward_allocation_bps = 4;
  optional uint64 encoder_tally_slash_rate_bps = 5;
  optional uint64 target_epoch_fee_collection = 6;
  optional uint64 base_fee = 7;
  optional uint64 write_object_fee = 8;
  optional uint64 value_fee_bps = 9;
  optional uint64 min_value_fee_bps = 10;
  optional uint64 max_value_fee_bps = 11;
  optional uint64 fee_adjustment_rate_bps = 12;
  optional uint64 claim_incentive_bps = 13;
}

message EmissionPool {
  optional uint64 balance = 1;
  optional uint64 emission_per_epoch = 2;
}

message ValidatorSet {
  optional uint64 total_stake = 1;
  repeated Validator validators = 2;
  repeated Validator pending_validators = 3;
  repeated uint32 pending_removals = 4;
  map<string, string> staking_pool_mappings = 5; // pool_id -> validator_address
  map<string, Validator> inactive_validators = 6; // pool_id -> validator
  map<string, uint64> at_risk_validators = 7; // address -> epochs_at_risk
}

message Validator {
  optional string soma_address = 1;
  optional bytes protocol_pubkey = 2;
  optional bytes network_pubkey = 3;
  optional bytes worker_pubkey = 4;
  optional string net_address = 5;
  optional string p2p_address = 6;
  optional string primary_address = 7;
  
  optional uint64 voting_power = 8;
  optional uint64 commission_rate = 9;
  optional uint64 next_epoch_stake = 10;
  optional uint64 next_epoch_commission_rate = 11;
  
  optional StakingPool staking_pool = 12;
  
  // Next epoch metadata (only if set)
  optional bytes next_epoch_protocol_pubkey = 13;
  optional bytes next_epoch_network_pubkey = 14;
  optional bytes next_epoch_worker_pubkey = 15;
  optional string next_epoch_net_address = 16;
  optional string next_epoch_p2p_address = 17;
  optional string next_epoch_primary_address = 18;
}

message StakingPool {
  optional string id = 1;
  optional uint64 activation_epoch = 2;
  optional uint64 deactivation_epoch = 3;
  optional uint64 soma_balance = 4;
  optional uint64 rewards_pool = 5;
  optional uint64 pool_token_balance = 6;
  map<uint64, PoolTokenExchangeRate> exchange_rates = 7;
  optional uint64 pending_stake = 8;
  optional uint64 pending_total_soma_withdraw = 9;
  optional uint64 pending_pool_token_withdraw = 10;
}

message PoolTokenExchangeRate {
  optional uint64 soma_amount = 1;
  optional uint64 pool_token_amount = 2;
}

